added window to get parser to work

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "eslintConfig": {
+      "globals": {
+          "RSSParser": true
+      }
+  },
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
