--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     }
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.0.0-beta.8"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
